--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -2,7 +2,28 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
     <PreferenceCategory>
         <Preference
-            android:icon="@drawable/ic_book"
+            android:icon="@drawable/ic_info"
+            android:title="About">
+            <intent android:action="android.intent.action.VIEW"
+                android:targetPackage="com.android.chrome"
+                android:data="https://rutgerssakai.github.io/SakaiMobile/"/>
+        </Preference>
+        <Preference
+            android:icon="@drawable/ic_security"
+            android:title="Privacy Policy">
+            <intent android:action="android.intent.action.VIEW"
+                android:targetPackage="com.android.chrome"
+                android:data="https://rutgerssakai.github.io/SakaiMobile/privacy.html"/>
+        </Preference>
+        <Preference
+            android:icon="@drawable/ic_tag_faces"
+            android:title="Thanks To">
+            <intent android:action="android.intent.action.VIEW"
+                android:targetPackage="com.sakaimobile.development.sakaiclient20"
+                android:targetClass="com.sakaimobile.development.sakaiclient20.ui.activities.CreditsActivity"/>
+        </Preference>
+        <Preference
+            android:icon="@drawable/ic_email"
             android:title="Contact Us">
             <intent android:action="android.intent.action.SENDTO"
                 android:data="mailto:rutgerssakaiapp@gmail.com">
@@ -11,6 +32,13 @@
                 <extra android:name="android.intent.extra.TEXT"
                     android:value="Dear Rutgers Sakai Mobile developers,\n\nHere is some feedback to improve the app:\n\n\n\nRegards," />
             </intent>
+        </Preference>
+        <Preference
+            android:icon="@drawable/ic_star"
+            android:title="Rate Rutgers Sakai Mobile">
+            <intent android:action="android.intent.action.VIEW"
+                android:targetPackage="com.android.chrome"
+                android:data="market://details?id=com.sakaimobile.development.sakaiclient20"/>
         </Preference>
     </PreferenceCategory>
 </PreferenceScreen>
