--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -12,35 +12,12 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <fragment
-            android:id="@+id/preferences_fragment"
-            android:name="com.sakaimobile.development.sakaiclient20.ui.fragments.UserPreferencesFragment"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
-        <Button
-            android:id="@+id/logout_button"
-            android:layout_width="192dp"
-            android:layout_height="56dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginBottom="16dp"
-            android:text="@string/logout"
-            android:textColor="@color/secondaryTextColor"
-            android:textStyle="bold"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/appinfo_linearlayout" />
-
         <LinearLayout
             android:id="@+id/settings_header"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
-            app:layout_constraintTop_toBottomOf="@id/preferences_fragment"
+            app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:layout_marginTop="16dp"
@@ -69,7 +46,7 @@
             android:id="@+id/logo_credits_txt"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="8dp"
             android:layout_marginLeft="8dp"
             android:layout_marginRight="8dp"
             android:text="@string/logo_made_with"
@@ -79,37 +56,28 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
 
-        <LinearLayout
-            android:id="@+id/appinfo_linearlayout"
+        <fragment
+            android:id="@+id/preferences_fragment"
+            android:name="com.sakaimobile.development.sakaiclient20.ui.fragments.UserPreferencesFragment"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/logo_credits_txt" />
+
+        <Button
+            android:id="@+id/logout_button"
+            android:layout_width="192dp"
+            android:layout_height="56dp"
             android:layout_marginTop="16dp"
-            android:orientation="vertical"
-            android:paddingLeft="8dp"
-            android:paddingRight="8dp"
-            app:layout_constraintTop_toBottomOf="@id/logo_credits_txt">
-
-            <include
-                android:id="@+id/about_item"
-                layout="@layout/appinfo_item" />
-
-            <include
-                android:id="@+id/privacy_item"
-                layout="@layout/appinfo_item" />
-
-            <include
-                android:id="@+id/credits_item"
-                layout="@layout/appinfo_item" />
-
-            <include
-                android:id="@+id/contactus_item"
-                layout="@layout/appinfo_item" />
-
-            <include
-                android:id="@+id/rate_item"
-                layout="@layout/appinfo_item" />
-
-        </LinearLayout>
+            android:layout_marginBottom="16dp"
+            android:text="@string/logout"
+            android:textColor="@color/primaryTextColor"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/preferences_fragment" />
 
     </android.support.constraint.ConstraintLayout>
 
