--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -38,7 +38,7 @@
             android:title="Rate Rutgers Sakai Mobile">
             <intent android:action="android.intent.action.VIEW"
                 android:targetPackage="com.android.chrome"
-                android:data="http://play.google.com/store/apps/details?id=com.sakaimobile.development.sakaiclient20"/>
+                android:data="https://play.google.com/store/apps/details?id=com.sakaimobile.development.sakaiclient20"/>
         </Preference>
     </PreferenceCategory>
 </PreferenceScreen>
