--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -65,12 +65,10 @@
 
     <style name="PreferencesTheme" parent="@style/PreferenceThemeOverlay">
         <item name="android:textColor">@color/secondaryTextColor</item>
+        <!-- Color for summaries (eg. version text) -->
         <item name="android:textColorSecondary">@color/secondaryTextColor</item>
         <!-- White color for category headings -->
         <item name="colorAccent">@color/primaryTextColor</item>
-        <item name="colorPrimary">@color/primaryTextColor</item>
-        <item name="colorPrimaryDark">@color/primaryTextColor</item>
-        <item name="colorSecondary">@color/primaryTextColor</item>
     </style>
 
 </resources>
