--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,7 @@
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:textColorLink">@color/linkColor</item>
         <item name="android:fontFamily">@font/lato</item>
+        <item name="alertDialogTheme">@style/AlertDialogTheme</item>
         <item name="preferenceTheme">@style/PreferencesTheme</item>
     </style>
 
@@ -48,6 +49,23 @@
         <item name="android:paddingRight">8dp</item>
     </style>
 
+    <style name="AlertDialogTheme" parent="Theme.AppCompat.Light.Dialog.Alert">
+        <!-- Used for the buttons -->
+        <item name="colorAccent">@color/linkColor</item>
+        <!-- Used for the title and text -->
+        <item name="android:textColorPrimary">@color/secondaryTextColor</item>
+        <!-- Used for the background -->
+        <item name="android:background">@color/tertiaryBackgroundColor</item>
+    </style>
+
+    <style name="PreferencesTheme" parent="@style/PreferenceThemeOverlay">
+        <item name="android:textColor">@color/secondaryTextColor</item>
+        <!-- Color for summaries (eg. version text) -->
+        <item name="android:textColorSecondary">@color/secondaryTextColor</item>
+        <!-- White color for category headings -->
+        <item name="colorAccent">@color/primaryTextColor</item>
+    </style>
+
     <style name="autoscroll">
         <item name="android:singleLine">true</item>
         <item name="android:ellipsize">marquee</item>
@@ -61,14 +79,6 @@
         <item name="android:singleLine">true</item>
         <item name="android:ellipsize">marquee</item>
         <item name="android:marqueeRepeatLimit">marquee_forever</item>
-    </style>
-
-    <style name="PreferencesTheme" parent="@style/PreferenceThemeOverlay">
-        <item name="android:textColor">@color/secondaryTextColor</item>
-        <!-- Color for summaries (eg. version text) -->
-        <item name="android:textColorSecondary">@color/secondaryTextColor</item>
-        <!-- White color for category headings -->
-        <item name="colorAccent">@color/primaryTextColor</item>
     </style>
 
 </resources>
