Migrated *everything* to AndroidX

--- a/app/src/main/res/layout/preferences_footer.xml
+++ b/app/src/main/res/layout/preferences_footer.xml
@@ -6,7 +6,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="center">
 
-    <android.support.v7.widget.AppCompatButton
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/logout_button"
         android:layout_width="192dp"
         android:layout_height="56dp"
