--- a/app/src/main/res/layout/fragment_full_announcement.xml
+++ b/app/src/main/res/layout/fragment_full_announcement.xml
@@ -8,7 +8,7 @@
     android:clickable="true"
     android:focusable="true">
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginBottom="16dp"
@@ -26,7 +26,7 @@
             android:background="@color/tertiaryBackgroundColor">
 
             <!--header-->
-            <android.support.constraint.ConstraintLayout
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:id="@+id/header_container"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -79,7 +79,7 @@
                     android:layout_height="wrap_content"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent"
-                    android:layout_alignTop="@id/assignment_name"
+                    android:layout_alignTop="@id/announcement_title"
                     android:text="\uf00d"
                     android:textColor="@color/secondaryTextColor"
                     android:textSize="20sp"
@@ -87,7 +87,7 @@
                     android:background="?android:attr/selectableItemBackground"
                     style="@style/FontawesomeText"/>
 
-            </android.support.constraint.ConstraintLayout>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
             <View
                 android:layout_width="match_parent"
@@ -165,6 +165,6 @@
         </LinearLayout>
 
 
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
 </FrameLayout>
