--- a/app/src/main/res/layout/fragment_single_assignment.xml
+++ b/app/src/main/res/layout/fragment_single_assignment.xml
@@ -6,7 +6,7 @@
     android:background="@color/primaryBackgroundColor"
     tools:fragment="com.sakaimobile.development.sakaiclientandroid.fragments.assignments.SingleAssignmentFragment">
 
-    <android.support.v7.widget.CardView
+    <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:cardCornerRadius="4dp"
@@ -178,7 +178,7 @@
                 </LinearLayout>
             </ScrollView>
 
-            <android.support.design.widget.FloatingActionButton
+            <com.google.android.material.floatingactionbutton.FloatingActionButton
                 android:id="@+id/assignment_submit_button"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -187,13 +187,11 @@
                 android:layout_marginRight="16dp"
                 android:layout_marginBottom="16dp"
                 app:srcCompat="@drawable/ic_open_in_new_24dp"
-                android:tint="@color/primaryTextColor">
-
-            </android.support.design.widget.FloatingActionButton>
+                android:tint="@color/primaryTextColor" />
 
         </RelativeLayout>
 
-    </android.support.v7.widget.CardView>
+    </androidx.cardview.widget.CardView>
 
 </FrameLayout>
 
